--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -2,90 +2,38 @@
   <div class="container">
 
     <div class="footer__inner">
+      <a href="mailto:contact@portableunitbuilders.com">
+        contact@portableunitbuilders.com
+      </a>
       <a class="logo" href="index.html">
-        <img class="logo__img" src="./images/logo-white.svg" alt="Elite Roof Works " width="90" height="68">
+        <img class="logo__img" src="./images/logo.svg" alt="Portable Unit Builders" width="252" height="30">
       </a>
 
-      <ul class="footer__navs">
-        <li class="footer__nav">
-          <p>
-            Menu
-          </p>
-
-          <ul class="footer__list">
-            <li class="footer__item">
-              <a class="footer__link" href="index.html">
-                Home
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a class="footer__link" href="services.html">
-                Services
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a class="footer__link" href="about.html">
-                About Us
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a class="footer__link" href="index.html#reviews">
-                Customer Reviews
-              </a>
-            </li>
-          </ul>
+      <ul class="footer__nav">
+        <li class="footer__item">
+          <a class="footer__link" href="index.html">
+            Home
+          </a>
         </li>
 
-        <li class="footer__nav">
-          <p>
+        <li class="footer__item">
+          <a class="footer__link" href="services.html">
             Services
-          </p>
-
-          <ul class="footer__list">
-            <li class="footer__item">
-              <a class="footer__link" href="services.html#installation">
-                Installation
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a class="footer__link" href="services.html#repair">
-                Repair
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a class="footer__link" href="services.html#replacement">
-                Replacement
-              </a>
-            </li>
-          </ul>
+          </a>
         </li>
 
-        <li class="footer__nav">
-          <p>
-            Quick Links
-          </p>
+        <li class="footer__item">
+          <a href="projects.html" class="footer__link">
+            Projects
+          </a>
+        </li>
 
-          <ul class="footer__list">
-            <li class="footer__item">
-              <a class="footer__link" href="policy.html">
-                Privacy Policy
-              </a>
-            </li>
-
-            <li class="footer__item">
-              <a class="footer__link" href="terms.html">
-                Terms & Conditions
-              </a>
-            </li>
-          </ul>
+        <li class="footer__item">
+          <a href="faq.html" class="footer__link">
+            FAQ
+          </a>
         </li>
       </ul>
-
     </div>
 
     <div class="footer__copyrigth">
@@ -99,8 +47,3 @@
 
 <script src="https://forms.app/static/embed.js" type="text/javascript" async defer
   onload="new formsapp('65cdfd9f9bca4c6abdbfd480', 'popup', {'overlay':'rgba(45,45,45,0.5)','button':{'color':'transparent','text':'Sign Up'},'width':'800px','height':'600px','openingAnimation':{'entrance':'animate__fadeIn','exit':'animate__fadeOut'}});"></script>
-
-<div id="form-request">
-  <iframe allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera"
-    src="https://respondto.forms.app/dcmarketing/service-request-form" frameborder="0"></iframe>
-</div>
