--- a/src/html/about/_choose.html
+++ b/src/html/about/_choose.html
@@ -1,4 +1,4 @@
-<section class="choose">
+<!-- <section class="choose">
   <div class="container">
 
     <h2>
@@ -48,4 +48,4 @@
     </ul>
 
   </div>
-</section>
+</section> -->
