--- a/src/html/about/_mission.html
+++ b/src/html/about/_mission.html
@@ -1,4 +1,4 @@
-<section class="mission">
+<!-- <section class="mission">
   <h2>
     Mission and Values
   </h2>
@@ -36,4 +36,4 @@
       </p>
     </li>
   </ul>
-</section>
+</section> -->
