--- a/src/html/about/_reach.html
+++ b/src/html/about/_reach.html
@@ -1,4 +1,4 @@
-<section class="reach">
+<!-- <section class="reach">
 
   <h2>
     Reach out to our team for inquiries or collaborations today.
@@ -12,4 +12,4 @@
     Contact Us
   </a>
 
-</section>
+</section> -->
