--- a/src/html/contact/_hero.html
+++ b/src/html/contact/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero hero--contact">
+<!-- <section class="hero hero--contact">
   <div class="hero__inner overlay" style="background-image: url('./images/contact/hero.jpg');">
 
     <div class="hero__content">
@@ -12,4 +12,4 @@
     </div>
 
   </div>
-</section>
+</section> -->
