--- a/src/html/contact/_request.html
+++ b/src/html/contact/_request.html
@@ -1,4 +1,4 @@
-<section class="request request--contact">
+<!-- <section class="request request--contact">
   <div class="container">
 
     <h2>
@@ -42,4 +42,4 @@
     </form>
 
   </div>
-</section>
+</section> -->
