--- a/src/html/home/_featured.html
+++ b/src/html/home/_featured.html
@@ -1,5 +1,5 @@
 <section class="featured">
-  <div class="featured__content" style="background-image: url('./images/home/featured.png');">
+  <div class="featured__content" style="background-image: url('./images/home/hero.jpeg');">
     <h2>
       Featured Projects
     </h2>
@@ -16,8 +16,8 @@
 
   <ul class="featured__grid">
     <li class="featured__item">
-      <img class="featured__image" src="./images/home/restoration.jpg" alt="Repair and Restoration for a Heritage"
-        width="300" height="228">
+      <!-- <img class="featured__image" src="./images/home/restoration.jpg" alt="Repair and Restoration for a Heritage"
+        width="300" height="228"> -->
 
       <h3>
         Repair and Restoration for a Heritage
@@ -33,8 +33,8 @@
     </li>
 
     <li class="featured__item">
-      <img class="featured__image" src="./images/home/residential.jpg" alt="Residential Upgrade" width="300"
-        height="228">
+      <!-- <img class="featured__image" src="./images/home/residential.jpg" alt="Residential Upgrade" width="300"
+        height="228"> -->
 
       <h3>
         Residential Upgrade
@@ -50,8 +50,8 @@
     </li>
 
     <li class="featured__item">
-      <img class="featured__image" src="./images/home/modern.jpg"
-        alt="Installation of a Modern Roof with Energy-Efficient Features Details" width="300" height="228">
+      <!-- <img class="featured__image" src="./images/home/modern.jpg"
+        alt="Installation of a Modern Roof with Energy-Efficient Features Details" width="300" height="228"> -->
 
       <h3>
         Installation of a Modern Roof with Energy-Efficient Features Details
