--- a/src/html/home/_services.html
+++ b/src/html/home/_services.html
@@ -1,63 +1,61 @@
 <section class="services">
   <div class="container">
+  <div class="services__content">
 
     <h2>
-      Roof Services
+      Transforming Spaces, Exceeding Expectations
     </h2>
 
+    <p>
+      Portable Unit Builders is dedicated to innovating high-quality, customizable portable units, with a commitment to excellence.
+    </p>
+
     <ul class="services__grid">
-      <li class="services__item services__item--installations">
+      <li class="services__item services__item--quality">
         <h3>
-          Installation
+          Quality
         </h3>
 
         <p>
-          Our experts excel in installing roofs for diverse structures, from homes to commercial buildings. We recognize
-          the
-          crucial role a well-installed roof plays in weather protection. With pride in our superior craftsmanship, we
-          meticulously choose materials and execute installations to surpass your expectations
+          We pursue excellence in every task, using top-grade materials
         </p>
-
-        <button class="btn btn--simple request-btn" type="button">
-          Request
-        </button>
       </li>
 
-      <li class="services__item services__item--repairs">
+      <li class="services__item services__item--integrity">
         <h3>
-          Repair
+          Integrity
         </h3>
 
         <p>
-          When your roof needs urgent care, our skilled team is prepared to deliver swift and efficient repairs.
-          Specializing in
-          fixing problems like leaks, damaged shingles, and general wear, we respond quickly to restore your roof,
-          preventing
-          further damage and preserving your property's integrity
+          Honest, transparent communication is our keystone
         </p>
-
-        <button class="btn btn--simple request-btn" type="button">
-          Request
-        </button>
       </li>
 
-      <li class="services__item services__item--replacement">
+      <li class="services__item services__item--reliability">
         <h3>
-          replacement
+          Reliability
         </h3>
 
         <p>
-          Upgrade your property with our professional roof replacement. We ensure a seamless process, from selecting
-          high-quality
-          materials to expert installation, providing a durable and aesthetically pleasing solution for your home or
-          business
+          We  always ready to respond, offering efficient service
         </p>
+      </li>
 
-        <button class="btn btn--simple request-btn" type="button">
-          Request
-        </button>
+      <li class="services__item services__item--innovation">
+        <h3>
+          Innovation
+        </h3>
+
+        <p>
+          We leverage the latest technologies and practices
+        </p>
       </li>
     </ul>
 
   </div>
+
+  <div class="services__image">
+    <img src="./images/home/spaces.png" alt="maintenance" width="546" height="547">
+  </div>
+</div>
 </section>
