--- a/src/html/services/_hero.html
+++ b/src/html/services/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero hero--services">
+<!-- <section class="hero hero--services">
   <div class="container">
     <div class="hero__inner " style="background-image: url('./images/services/hero.jpg');">
 
@@ -25,4 +25,4 @@
     </div>
 
   </div>
-</section>
+</section> -->
