--- a/src/html/services/_services.html
+++ b/src/html/services/_services.html
@@ -1,4 +1,4 @@
-<section class="service">
+<!-- <section class="service">
   <h2>
     Roof Services
   </h2>
@@ -121,4 +121,4 @@
   <button class="btn request-btn" type="button">
     Make A Request
   </button>
-</section>
+</section> -->
