--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,36 @@
     <include src="./html/_header.html" locals='{"page": "home"}'></include>
 
     <main class="main">
-      <div class="container">
-        <include src="./html/home/_hero.html"></include>
 
-        <include src="./html/home/_about.html"></include>
-      </div>
+      <include src="./html/_hero.html">
+        {
+          "title": "
+            Expert Craftsmanship in Modular Construction
+          ",
+          "text": "
+            Where Quality Meets Mobility
+          ",
+          "image": "home",
+          "button": "Request a Quote"
+        }
+      </include>
 
       <include src="./html/home/_services.html"></include>
 
       <div class="container">
-        <include src="./html/home/_reviews.html"></include>
 
-        <include src="./html/home/_featured.html"></include>
+        <include src="./html/home/_solutions.html"></include>
+        
+        <include src="./html/home/_projects.html"></include>
+
       </div>
 
-      <include src="./html/home/_request.html"></include>
+      <include src="./html/home/_additional.html"></include>
 
+      <div class="container">
+        <include src="./html/home/_request.html"></include>
+      </div>
+      
     </main>
 
     <include src="./html/_footer.html"></include>
