--- a/src/services.html
+++ b/src/services.html
@@ -7,7 +7,18 @@
     <include src="./html/_header.html" locals='{"page": "services"}'></include>
 
     <main class="main">
-      <include src="./html/services/_hero.html"></include>
+      <include src="./html/_hero.html">
+        {
+          "title": "
+            Explore Our Services
+          ",
+          "text": "
+            Our Services
+          ",
+          "image": "services",
+          "button": "Request a Quote"
+        }
+      </include>
 
       <div class="container">
 
