--- a/src/faq.html
+++ b/src/faq.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="uk" class="page">
-<include src="./html/_head.html" locals='{"title": "Contact"}'></include>
+<include src="./html/_head.html" locals='{"title": "FAQ"}'></include>
 
 <body class="page__body">
   <div class="site-container">
-    <include src="./html/_header.html" locals='{"page": "contact"}'></include>
+    <include src="./html/_header.html" locals='{"page": "faq"}'></include>
 
     <main class="main">
       <div class="container">
