--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <nav class="nav">
       <a class="logo" href="index.html">
-        <img class="logo__img" src="./images/logo.svg" alt="Elite Roof Works " width="90" height="68">
+        <img class="logo__img" src="./images/logo.svg" alt="Portable Unit Builders" width="306" height="30">
       </a>
 
       <button class="burger" aria-label="Mobile menu" type="button"> <span></span> </button>
@@ -23,20 +23,24 @@
           </li>
 
           <li class="nav__item">
-            <a href="about.html" class="nav__link {{ page === 'about' }}">
-              About Us
+            <a href="projects.html" class="nav__link {{ page === 'projects' }}">
+              Projects
             </a>
           </li>
 
           <li class="nav__item">
-            <a href="contact.html" class="nav__link {{ page === 'contact' }}">
-              Contact
+            <a href="faq.html" class="nav__link {{ page === 'faq' }}">
+              FAQ
             </a>
           </li>
         </ul>
 
-        <button class="btn request-btn" type="button">
-          Make A Request
+        <a class="btn btn--link signup-btn" href="sign-up.html">
+          Sign Up
+        </a>
+
+        <button class="btn btn--simple request-btn" type="button">
+          Request a Qoute
         </button>
       </div>
     </nav>
