--- a/src/html/about/_hero.html
+++ b/src/html/about/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero hero--about">
+<!-- <section class="hero hero--about">
   <div class="hero__inner overlay" style="background-image: url('./images/about/hero.jpg');">
 
     <div class="hero__content">
@@ -13,4 +13,4 @@
     </div>
 
   </div>
-</section>
+</section> -->
