--- a/src/html/about/_team.html
+++ b/src/html/about/_team.html
@@ -1,4 +1,4 @@
-<section class="team">
+<!-- <section class="team">
 
   <h2>
     our team
@@ -145,4 +145,4 @@
 
   <div class="swiper-pagination"></div>
 
-</section>
+</section> -->
