--- a/src/html/about/_who.html
+++ b/src/html/about/_who.html
@@ -1,4 +1,4 @@
-<section class="featured featured--who">
+<!-- <section class="featured featured--who">
   <h2>
     Who We Are?
   </h2>
@@ -17,4 +17,4 @@
     </p>
   </div>
 
-</section>
+</section> -->
