--- a/src/html/home/_reviews.html
+++ b/src/html/home/_reviews.html
@@ -10,8 +10,8 @@
         <div class="reviews__content">
 
           <div class="reviews__header">
-            <img class="reviews__avatar" src="./images/home/review/kenneth.jpg" alt="Kenneth W. review" width="64"
-              height="64">
+            <!-- <img class="reviews__avatar" src="./images/home/review/kenneth.jpg" alt="Kenneth W. review" width="64"
+              height="64"> -->
 
             <div class="reviews__author">
 
@@ -43,17 +43,17 @@
           </div>
         </div>
 
-        <div class="reviews__image">
+        <!-- <div class="reviews__image">
           <img src="./images/home/review/first.jpg" alt="Kenneth W. review" width="680" height="550">
-        </div>
+        </div> -->
       </li>
 
       <li class="reviews__slide swiper-slide">
         <div class="reviews__content">
 
           <div class="reviews__header">
-            <img class="reviews__avatar" src="./images/home/review/sara.jpg" alt="Sara F. review" width="64"
-              height="64">
+            <!-- <img class="reviews__avatar" src="./images/home/review/sara.jpg" alt="Sara F. review" width="64"
+              height="64"> -->
 
             <div class="reviews__author">
 
@@ -61,9 +61,7 @@
                 Sara F.
               </h3>
 
-              <svg>
-                <use xlink:href="./icons/stars-four.svg"></use>
-              </svg>
+             
             </div>
           </div>
 
@@ -85,9 +83,9 @@
           </div>
         </div>
 
-        <div class="reviews__image">
+        <!-- <div class="reviews__image">
           <img src="./images/home/review/second.jpg" alt="Sara F. review" width="680" height="550">
-        </div>
+        </div> -->
       </li>
 
       <li class="reviews__slide swiper-slide">
@@ -95,8 +93,8 @@
         <div class="reviews__content">
 
           <div class="reviews__header">
-            <img class="reviews__avatar" src="./images/home/review/jose.jpg" alt="Jose D. review" width="64"
-              height="64">
+            <!-- <img class="reviews__avatar" src="./images/home/review/jose.jpg" alt="Jose D. review" width="64"
+              height="64"> -->
 
             <div class="reviews__author">
 
@@ -104,9 +102,9 @@
                 Jose D.
               </h3>
 
-              <svg>
+              <!-- <svg>
                 <use xlink:href="./icons/stars.svg"></use>
-              </svg>
+              </svg> -->
             </div>
           </div>
 
@@ -128,9 +126,9 @@
           </div>
         </div>
 
-        <div class="reviews__image">
+        <!-- <div class="reviews__image">
           <img src="./images/home/review/third.jpg" alt="Jose D. review" width="680" height="550">
-        </div>
+        </div> -->
       </li>
     </ul>
 
