adaptive for home

--- a/src/faq.html
+++ b/src/faq.html
@@ -9,7 +9,7 @@
     <main class="main">
       <div class="container">
         <include src="./html/contact/_hero.html"></include>
-
+        <include src="./html/_faq.html"></include>
       </div>
 
       <include src="./html/contact/_request.html"></include>
