--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,47 +1,50 @@
 <footer class="footer">
-  <div class="container">
+  
+  <div class="footer__inner">
+    <div class="container">
+      <div class="footer__links">
+        <a href="mailto:contact@portableunitbuilders.com">
+          contact@portableunitbuilders.com
+        </a>
+        <a class="logo" href="index.html">
+          <img class="logo__img" src="./images/logo.svg" alt="Portable Unit Builders" width="252" height="30">
+        </a>
+      </div>
 
-    <div class="footer__inner">
-      <a href="mailto:contact@portableunitbuilders.com">
-        contact@portableunitbuilders.com
-      </a>
-      <a class="logo" href="index.html">
-        <img class="logo__img" src="./images/logo.svg" alt="Portable Unit Builders" width="252" height="30">
-      </a>
+      <div class="footer__btns">
+        <a class="btn btn--link signup-btn" href="sign-up.html">
+          Sign Up
+        </a>
 
-      <ul class="footer__nav">
-        <li class="footer__item">
-          <a class="footer__link" href="index.html">
-            Home
-          </a>
-        </li>
-
-        <li class="footer__item">
-          <a class="footer__link" href="services.html">
-            Services
-          </a>
-        </li>
-
-        <li class="footer__item">
-          <a href="projects.html" class="footer__link">
-            Projects
-          </a>
-        </li>
-
-        <li class="footer__item">
-          <a href="faq.html" class="footer__link">
-            FAQ
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="footer__copyrigth">
-      <p>
-        © Copyright. All Rights Reserved
-      </p>
+        <button class="btn btn--simple request-btn" type="button">
+          Request a Qoute
+        </button>
+      </div>
     </div>
   </div>
+
+    <div class="footer__copyrigth container">
+      <p>
+        Portable Unit Builders © 2024. All Rights Reserved
+      </p>
+
+      <div class="copyrigth__nav">
+        <ul class="copyrigth__list">
+          <li class="copyrigth__item">
+            <a class="copyrigth__link" href="privacy-policy.html">
+              Privacy Policy
+            </a>
+          </li>
+
+          <li class="copyrigth__item">
+            <a class="copyrigth__link" href="terms-of-use.html">
+              Terms of Use
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+ 
 </footer>
 
 
