--- a/src/html/policy/_terms.html
+++ b/src/html/policy/_terms.html
@@ -18,7 +18,7 @@
 
     <ul>
       <li>
-        We take your privacy very seriously. See our <a href="policy.html">Privacy Policy</a>.
+        We take your privacy very seriously. See our <a href="privacy-policy.html">Privacy Policy</a>.
       </li>
 
       <li>
@@ -49,7 +49,7 @@
       are sent roofing quote request alerts. They may also receive discounts and newsletter alerts. Message freq varies.
       Message and data rates may apply. You may opt-out at any time by texting STOP. For help, text HELP or
       email <a href="mailto:help@eliteroofworks.com">help@eliteroofworks.com</a> please, see our <a
-        href="policy.html">Privacy Policy</a>
+        href="privacy-policy.html">Privacy Policy</a>
     </p>
 
     <h2>
