--- a/src/services.html
+++ b/src/services.html
@@ -20,12 +20,12 @@
         }
       </include>
 
+      <include src="./html/services/_services.html"></include>
+      
       <div class="container">
+        <include src="./html/services/_benefits.html"></include>
 
-        <include src="./html/services/_services.html"></include>
-
-        <include src="./html/services/_faq.html"></include>
-
+        <include src="./html/home/_request.html"></include>
       </div>
 
     </main>
