--- a/src/faq.html
+++ b/src/faq.html
@@ -7,13 +7,9 @@
     <include src="./html/_header.html" locals='{"page": "faq"}'></include>
 
     <main class="main">
-      <div class="container">
-        <include src="./html/contact/_hero.html"></include>
+      <div class="container container--faq">
         <include src="./html/_faq.html"></include>
       </div>
-
-      <include src="./html/contact/_request.html"></include>
-
     </main>
 
     <include src="./html/_footer.html"></include>
