--- a/src/html/_faq.html
+++ b/src/html/_faq.html
@@ -1,18 +1,18 @@
 <section class="faq">
   <h2>
-    Common Questions
+    Frequently Asked Question
   </h2>
 
   <ul class="faq__list">
     <li class="faq__item">
       <details>
         <summary>
-          How often should roof maintenance <br> be performed?
+          What is modular construction?
         </summary>
 
         <div>
           <p>
-            It is recommended to perform roof maintenance at least once a year.
+            Modular construction is a method of building structures off-site in a controlled environment, then transporting and assembling them on-site. It involves constructing individual modules or sections in a factory setting before they are transported to the construction site for assembly.
           </p>
         </div>
       </details>
@@ -21,14 +21,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What signs indicate the need for roof repair?
+          What are the advantages of modular construction?
         </summary>
 
         <div>
           <p>
-            Signs indicating the need for roof repair may include leaks, damage to roofing materials, and the formation
-            of rot or
-            mold.
+            Modular construction offers several benefits, including faster construction times, cost-effectiveness, reduced material waste, higher quality control, and increased flexibility in design and customization options.
           </p>
         </div>
       </details>
@@ -37,14 +35,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What materials are used for roofing, and what <br> are their main characteristics?
+          How long does it take to build a modular structure?
         </summary>
 
         <div>
           <p>
-            Various materials can be used for roofing, including shingles, metal, ceramic tiles, and membranes. The main
-            characteristics depend on the type of material and may include waterproofing, durability, and aesthetic
-            appearance.
+            The construction timeline for modular structures varies depending on factors such as size, complexity, and customization requirements. However, modular construction typically takes less time compared to traditional construction methods, with some projects completed in as little as a few weeks.
           </p>
         </div>
       </details>
@@ -53,14 +49,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What is the typical lifespan of roofing materials?
+          Are modular structures customizable?
         </summary>
 
         <div>
           <p>
-            The average lifespan of roofing materials can vary depending on the type of material, environmental
-            conditions, and
-            quality of installation. Typically, it ranges from 15 to 50 years.
+            Yes, modular structures are highly customizable to meet the unique needs and preferences of each client. From floor plans and interior finishes to exterior aesthetics and sustainability features, modular construction allows for extensive customization options.
           </p>
         </div>
       </details>
@@ -69,14 +63,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What types of roofs are available, and which one <br> is most suitable for my home/building?
+          What types of structures can be built using modular construction?
         </summary>
 
         <div>
           <p>
-            There are various types of roofs, including pitched, flat, mansard, etc. The choice of the most suitable
-            type depends on
-            several factors, including architectural style, climate conditions, and budget.
+            Modular construction can be used to build a wide range of structures, including but not limited to utility sheds, garden studios, mobile offices, classrooms, healthcare facilities, residential homes, and commercial buildings.
           </p>
         </div>
       </details>
@@ -85,14 +77,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What safety measures are taken during roof <br> installation or repair?
+          Are modular structures as durable as traditionally constructed buildings?
         </summary>
 
         <div>
           <p>
-            Various safety measures are taken during roof installation or repair, including the use of protective
-            equipment,
-            guardrails, and safety training.
+            Yes, modular structures are designed and engineered to meet or exceed the same durability and safety standards as traditionally constructed buildings. They undergo rigorous quality control processes during manufacturing to ensure structural integrity and longevity.
           </p>
         </div>
       </details>
@@ -101,14 +91,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          Are there any special permits or licenses <br> required for roofing work?
+          Do modular structures require permits and inspections?
         </summary>
 
         <div>
           <p>
-            Special permits or licenses may be required to perform roofing work in accordance with local legislative
-            requirements.
-            For example, this may include building permits or licenses for specialized types of work.
+            Yes, like any construction project, modular structures typically require permits and inspections to ensure compliance with local building codes and regulations. Our team can assist clients in obtaining the necessary permits and coordinate inspections as part of the project management process.
           </p>
         </div>
       </details>
@@ -117,14 +105,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What are the typical timelines for roof <br> installation, repair, or replacement?
+          Can modular structures be relocated or expanded in the future?
         </summary>
 
         <div>
           <p>
-            Typical timelines for roof installation, repair, or replacement may vary depending on the size of the
-            project, location
-            conditions, and material availability. Typically, they range from a few days to several weeks.
+            Yes, one of the advantages of modular construction is its inherent flexibility. Modular structures can be easily relocated to new sites if needed, and they can also be expanded or reconfigured to accommodate changing needs or growth.
           </p>
         </div>
       </details>
@@ -133,16 +119,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What are the standard warranties for a roof, and <br> what is included in the warranty terms?
+          What are the environmental benefits of modular construction?
         </summary>
 
         <div>
           <p>
-            Standard warranties for a roof may vary depending on the material supplier, type of work, and other factors.
-            They
-            typically include limited warranties on materials and workmanship, as well as terms for potential repair or
-            replacement
-            work.
+            Modular construction is known for its sustainability benefits, including reduced material waste, energy efficiency, and the ability to incorporate eco-friendly features such as renewable energy systems and green building materials.
           </p>
         </div>
       </details>
@@ -151,14 +133,12 @@
     <li class="faq__item">
       <details>
         <summary>
-          What recommendations can you provide for roof <br> maintenance after the work is completed?
+          How does the cost of modular construction compare to traditional construction methods?
         </summary>
 
         <div>
           <p>
-            After completing roof work, it is recommended to perform regular maintenance, including debris and leaf
-            removal,
-            inspection for damage, and servicing of gutters and downspouts.
+            While the initial upfront costs of modular construction may be comparable to or slightly higher than traditional construction methods, the overall cost savings can be significant due to shorter construction timelines, reduced labor costs, and minimized disruptions to surrounding areas. Additionally, the efficiency and sustainability of modular construction can lead to long-term cost savings in terms of energy consumption and maintenance.
           </p>
         </div>
       </details>
