--- a/src/html/home/_additional.html
+++ b/src/html/home/_additional.html
@@ -5,6 +5,6 @@
     </p>
   </div>
   <div class="additional__image">
-    <img src="./images/home/choose.jpeg" alt="Choose" width="720" height="505">
+    <img src="./images/home/choose.jpeg" alt="Choose us for unparalleled quality" width="720" height="505" loading="lazy">
   </div>
 </section>
