--- a/src/html/home/_projects.html
+++ b/src/html/home/_projects.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="projects__images">
-    <img src="./images/home/project-first.png" alt="project" width="591" height="804">
-    <img src="./images/home/project-second.png" alt="project" width="591" height="804">
+    <img src="./images/home/project-first.png" alt="Our Projects We Proud Of" width="591" height="804" loading="lazy">
+    <img src="./images/home/project-second.png" alt="Innovative Co-Working Space" width="591" height="804" loading="lazy">
   </div>
 </section>
