--- a/src/html/home/_services.html
+++ b/src/html/home/_services.html
@@ -55,7 +55,7 @@
   </div>
 
   <div class="services__image">
-    <img src="./images/home/spaces.png" alt="maintenance" width="546" height="547">
+    <img src="./images/home/spaces.png" alt="Transforming Spaces, Exceeding Expectations" width="546" height="547" loading="lazy">
   </div>
 </div>
 </section>
