--- a/src/html/services/_services.html
+++ b/src/html/services/_services.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="service__image">
-        <img src="./images/services/utility-sheds.jpeg" alt=" Utility Sheds" width="720" height="554">
+        <img src="./images/services/utility-sheds.jpeg" alt=" Utility Sheds" width="720" height="554" loading="lazy">
       </div>
     </li>
 
@@ -33,7 +33,7 @@
 
 
       <div class="service__image">
-        <img src="./images/services/garden-studios.jpeg" alt="Garden Studios" width="720" height="554">
+        <img src="./images/services/garden-studios.jpeg" alt="Garden Studios" width="720" height="554" loading="lazy">
       </div>
     </li>
 
@@ -50,7 +50,7 @@
 
 
       <div class="service__image">
-        <img src="./images/services/mobile-offices.jpeg" alt="mobile-offices" width="720" height="554">
+        <img src="./images/services/mobile-offices.jpeg" alt="mobile-offices" width="720" height="554" loading="lazy">
       </div>
     </li>
   </ul>
