--- a/src/html/home/_solutions.html
+++ b/src/html/home/_solutions.html
@@ -49,7 +49,7 @@
     </li>
   </ul>
 
-  <button class="btn btn--request request-btn" type="button">
+  <a class="btn btn--request request-btn" href="services.html">
     Learn More
-  </button>
+  </a>
 </section>
