--- a/src/html/projects/_projects.html
+++ b/src/html/projects/_projects.html
@@ -1,15 +1,14 @@
-<section class="project {{class_reverse}}">
+<section class="project {{addClass}}">
   <div class="project__content project__content--title">
     <h2>
       {{title}}
     </h2>
 
-    <div class="project__divider"></div>
-
-    <img src="./images/projects/{{image_title}}" alt="project" width="488" height="488">
+    <img src="./images/projects/{{image_title}}" alt="{{title}}" width="488" height="488" loading="lazy">
   </div>
+  
   <div class="project__content">
-    <img src="./images/projects/{{image_text}}" alt="project" width="488" height="488">
+    <img src="./images/projects/{{image_text}}" alt="project" width="488" height="488" loading="lazy">
 
     <p>
       {{text}}
