--- a/src/projects.html
+++ b/src/projects.html
@@ -24,7 +24,7 @@
       <div class="container">
         <include src="./html/projects/_projects.html">
           {
-            "class_reverse": "",
+            "addClass": "",
             "title": "
               Eco-Friendly Mobile Classroom
             ",
@@ -37,7 +37,7 @@
         </include>
         <include src="./html/projects/_projects.html">
           {
-            "class_reverse": "project--reverse",
+            "addClass": "project--reverse",
             "title": "
               Modular Health Clinic
             ",
@@ -50,7 +50,7 @@
         </include>
         <include src="./html/projects/_projects.html">
           {
-            "class_reverse": "",
+            "addClass": "",
             "title": "
               Innovative Co-Working Space
             ",
